--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <body>
     <div class="container">
       <div class="content">
-        <div class="logo">
-          <img src="logo (1).svg" alt=""/></div>
         <div class="image"></div>
         <div class="text"> Start for free & get<br />attractive offers today !
         </div>
@@ -27,11 +25,11 @@
                     </div>
                     <div class="btn">
                       <div class="btn-1">
-                          <img src="https://icons8.com/icon/114450/twitter-circled" />
+                          <img src="icons8-twitter-circled-48.png" />
                           Login via Twitter
                       </div>
                       <div class="btn-2">
-                          <img src="https://icons8.com/icon/uLWV5A9vXIPu/facebook" />
+                          <img src="icons8-facebook-48.png" />
                           Login via facebook
                       </div>
                     </div>
@@ -54,24 +52,24 @@
         </div>
         <!-- Email input-->
         <div>
-            <label for="email address"></label>
+            <label for="email "></label>
             <i class="fas fa-envelope"></i>
             <input 
-            type="emailaddress"
-            name="emailaddress"
-            id="emailaddress"
+            type="email"
+            name="email"
+            id="email"
             placeholder="Email address">
             <i class="fas fa-exclamation-circle failure-icon"></i>
             <i class="fas fa-check-circle success-icon"></i>
             <div class="error"></div>
         </div>
         <div>
-            <label for="email address"></label>
-             
-            <input 
-            type="phonenumber"
-            name="phonenumber"
-            id="phonenumber"
+            <label for="phone "></label>
+            <i class="fas fa-phone-square"></i>
+            <input
+            type="phone"
+            name="phone"
+            id="phone"
             placeholder="Phone number">
             <i class="fas fa-exclamation-circle failure-icon"></i>
             <i class="fas fa-check-circle success-icon"></i>
